fix. 메인페이지 width, height overflow 조정

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,28 +16,30 @@
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
 }
 
 .features {
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  /* gap: 2rem; */
   margin-top: 2rem;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
 }
 
 .feature-card {
   flex: 1;
-  min-width: 300px;
-  max-width: 400px;
+  /* min-width: 300px;
+  max-width: 400px; */
+  width: 400px;
+  height: 250px;
   background: white;
-  padding: 2.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
   transition: transform 0.3s ease;
+  margin: 0 20px 0 20px;
 }
 
 .feature-card:hover {
@@ -78,13 +80,12 @@
   }
 
   .feature-card {
-    width: 100%;
-    max-width: 100%;
+    width: 90%;
+    margin-bottom: 15px;
   }
 
   .reviews-section {
     width: 100%;
-    min-width: 100%;
     margin-top: 3rem;
     padding: 2rem;
     height: 450px;
@@ -99,7 +100,7 @@
   .reviews-container {
     padding: 1rem 0;
     height: 320px;
-    max-width: 100%;
+    width: 100%;
   }
 
   .review-card {
@@ -188,7 +189,6 @@ p {
   background-color: #ff8d13;
   color: white;
   border: none;
-  
 }
 
 .start-button:hover,
@@ -221,10 +221,10 @@ p {
 }
 
 .reviews-section {
-  width: 140%;
-  min-width: 1200px;
+  width: 100%;
+  /* min-width: 1200px; */
   margin-top: 4rem;
-  padding: 3rem;
+  /* padding: 3rem; */
   background-color: #f8f9fa;
   border-radius: 20px;
   height: 500px;
@@ -258,9 +258,8 @@ p {
 .reviews-container {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
   width: 100%;
-  max-width: 1400px;
+  gap: 2rem;
   margin: 0 auto;
   overflow: hidden;
   padding: 2rem 0;
@@ -279,7 +278,7 @@ p {
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 0 3rem;
+  /* padding: 0 3rem; */
 }
 
 .review-card {
@@ -425,4 +424,3 @@ p {
   opacity: 0.2;
   font-family: serif;
 }
-
